--- a/src/components/layout/Footer.css
+++ b/src/components/layout/Footer.css
@@ -1,7 +1,6 @@
 .footer_container {
   width: 100%;
   min-height: 50vh;
-  /* background-color:var(--darkblue); */
   background-image: url("https://static.vecteezy.com/system/resources/thumbnails/011/545/805/small_2x/abstract-luxury-glowing-lines-curved-overlapping-on-dark-blue-background-template-premium-award-design-free-vector.jpg");
   background-size: cover;
   background-position: center;
@@ -9,7 +8,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-gap: 2rem;
+  gap: 2rem;
 }
 .mech {
   font-size: 3rem;
@@ -22,20 +21,14 @@ gap: 2rem;
 .engineeringSolution {
   color: var(--gray);
   padding-left: 7.3rem;
-
   font-size: 0.55rem;
 }
 
 .footer-column {
   width: 100%;
-
-  /* border: 1px solid red; */
   display: flex;
   justify-content: space-around;
   align-items: center;
-  /* gap: 13.5rem; */
-
-  /* flex-direction: column; */
 }
 .footerthree-icons {
   display: flex;
@@ -53,16 +46,12 @@ gap: 2rem;
   width: 17rem;
   display: flex;
   flex-direction: column;
-  /* gap: 1.8rem; */
 }
 .keen img {
   width: 6rem;
 }
 .office {
   color: white;
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* gap: 1rem; */
 }
 .office h3 {
   color: var(--orange);
@@ -88,15 +77,11 @@ gap: 2rem;
   width: 90%;
   height: 1px;
   background-color: var(--orange);
-  /* border-top: 1rem solid gray; */
-  /* display: flex; */
-  /* margin-bottom: 7rem; */
 }
 @media (max-width: 768px) {
   .footer-column {
     flex-direction: column;
     gap: 0;
-    /* align-items: start; */
     align-items: center;
     text-align: center;
     justify-content: center;
@@ -115,11 +100,10 @@ gap: 2rem;
     align-items: center;
     text-align: center;
   }
-  .office{
-    display:none;
+  .office {
+    display: none;
   }
-  .footer-servicelist
-  {
+  .footer-servicelist {
     display: none;
   }
 }
