--- a/src/components/layout/MissionAndVision.css
+++ b/src/components/layout/MissionAndVision.css
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  align-items: center;
+
 }
 .mission-content p {
   width: 38rem;
@@ -30,7 +32,7 @@
   width: 75rem;
   height: 20rem;
   background-color: var(--lightgray);
-  margin-left: 10rem;
+  /* margin-left: 10rem; */
   border-radius: .5rem;
 }
 @media (max-width: 768px) {
@@ -38,17 +40,29 @@
     flex-direction: column;
   }
   .mission-image {
-    width: 17rem;
-    height: 17rem;
+    /* width: 17rem;
+    height: 17rem; */
+    display: none;
+  }
+  .mission-container
+  {
+      width: 17rem;
+      height: 28rem;
+      /* margin-left: 0 */
   }
   .mission-content p {
-    width: 17rem;
+    width: 16.8rem;
+    text-align: center;
   }
   .mission-ul {
     width: 15rem;
   }
   .missionAndvision-Container
   {
-    height: 250vh;
+    height:140vh;
   }
+ .ourMissionn
+ {
+  text-align: center;
+ }
 }
