--- a/src/components/layout/AboutPage.css
+++ b/src/components/layout/AboutPage.css
@@ -1,6 +1,6 @@
 .aboutContainer {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: var(--white);
   display: flex;
 
@@ -58,7 +58,7 @@
 
 @media (max-width: 768px) {
   .aboutContainer {
-    height: 150vh;
+    min-height: 150vh;
     flex-direction: column;
     gap: 2rem;
   }
