--- a/src/components/layout/Banner.css
+++ b/src/components/layout/Banner.css
@@ -7,10 +7,10 @@
   width: 100%;
   min-height: 100vh;
   background: radial-gradient(#002060d6, #051536ee);
-  display: flex; 
+  display: flex;
   /* flex-direction: column; */
-   justify-content:center; 
-  align-items: center; 
+  justify-content: center;
+  align-items: center;
   color: var(--white);
   gap: 17rem;
 }
@@ -22,56 +22,46 @@
   border-radius: 2rem;
   
 } */
-.bannerShadow p{
+.bannerShadow p {
   /* text-align: center; */
   width: 68rem;
   color: var(--lightblue);
-
 }
-.bannerShadowheading{
+.bannerShadowheading {
   /* text-align: center; */
   font-size: 5rem;
   font-weight: bold;
   /* font-family: "Arimo", sans-serif; */
   /* color:yellow; */
   font-family: "Times New Roman", Times, serif;
-  
 }
-.bannerReadmore
-{
+.bannerReadmore {
   width: 10rem;
   height: 3rem;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   color: white;
   /* border: none; */
   font-size: 1rem;
   border: 2px solid gray;
   background-color: var(--blue);
 }
-.bannerReadmore:hover
-{
+.bannerReadmore:hover {
   /* background-color: var(--lightblue); */
   color: var(--lightblue);
 }
-.banner
-{
+.banner {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-
-@media(max-width:768px)
-{
-  .bannerShadow p{
+@media (max-width: 768px) {
+  .bannerShadow p {
     text-align: center;
     width: 17rem;
-  
   }
-  .bannerShadowheading 
-  {
-      font-size: 1.8rem;
-      text-align: center;
+  .bannerShadowheading {
+    font-size: 1.8rem;
+    text-align: center;
   }
-  
 }
