--- a/src/components/layout/HomeService.css
+++ b/src/components/layout/HomeService.css
@@ -1,13 +1,10 @@
 .homeService {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-
   gap: 1rem;
-  /* align-items: center; */
   justify-content: center;
-
   background-color: var(--lightgray);
 }
 .ourServices {
@@ -21,7 +18,6 @@
 .serviceBox {
   width: 17rem;
   height: 17rem;
-  /* background-color: var(--darkblue); */
   border-radius: 0.5rem 0;
   background-color: white;
 }
@@ -74,10 +70,8 @@
 .do {
   color: var(--darkblue);
 }
-.mechanicalDes
-{
-  color: var(--darkblue
-  );
+.mechanicalDes {
+  color: var(--darkblue);
 }
 
 @media (max-width: 768px) {
@@ -85,7 +79,7 @@
     flex-direction: column;
   }
   .homeService {
-    height: 200vh;
+    min-height: 200vh;
     gap: 1rem;
     align-items: center;
   }
