--- a/src/components/layout/MissionAndVision.css
+++ b/src/components/layout/MissionAndVision.css
@@ -1,6 +1,6 @@
 .missionAndvision-Container {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -59,7 +59,7 @@
   }
   .missionAndvision-Container
   {
-    height:140vh;
+    min-height:140vh;
   }
  .ourMissionn
  {
