--- a/src/components/layout/WhyChoose.css
+++ b/src/components/layout/WhyChoose.css
@@ -1,6 +1,6 @@
 .whychooseContainer {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -66,6 +66,6 @@
   }
   .whychooseContainer
   {
-    height: 190vh;
+    min-height: 190vh;
   }
 }
