--- a/src/components/pages/Career.css
+++ b/src/components/pages/Career.css
@@ -1,6 +1,6 @@
 .career-container {
   width: 100%;
-  height: 160vh;
+  min-height: 160vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,9 +14,9 @@
   background-size: cover;
   background-position: center;
 }
-.career-banner p{
-    color: white;
-    text-align: center;
+.career-banner p {
+  color: white;
+  text-align: center;
 }
 .career {
   font-size: 2rem;
@@ -96,6 +96,6 @@
     gap: 1rem;
   }
   .career-container {
-    height: 225vh;
+    min-height: 225vh;
   }
 }
