--- a/src/components/pages/Career.css
+++ b/src/components/pages/Career.css
@@ -1,10 +1,12 @@
 .career-container {
   width: 100%;
-  min-height: 160vh;
+  /* min-height: 160vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* justify-content: center; */
   gap: 2rem;
+  padding-bottom: 3rem;
 }
 
 .career-banner {
@@ -46,6 +48,8 @@
   display: flex;
   flex-direction: column;
   /* gap: .5rem; */
+  align-items: center;
+  
 }
 .careerinput {
   width: 26.5rem;
@@ -66,6 +70,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+
 }
 .careerbutton {
   width: 12rem;
@@ -96,6 +101,6 @@
     gap: 1rem;
   }
   .career-container {
-    min-height: 225vh;
+    /* min-height: 225vh; */
   }
 }
