--- a/src/components/pages/Career.css
+++ b/src/components/pages/Career.css
@@ -82,10 +82,10 @@
 
 @media (max-width: 768px) {
   .career-opportunities p {
-    width: 17rem;
+    width: 100%;
   }
   .career-opportunities h3 {
-    width: 17rem;
+    width: 100%;
   }
   .careerinput {
     width: 15rem;
