--- a/src/components/pages/Career.css
+++ b/src/components/pages/Career.css
@@ -65,6 +65,7 @@
   display: flex;
   /* flex-direction: column; */
   gap: 2rem;
+  /* justify-content: center; */
 }
 .inputt {
   display: flex;
@@ -88,7 +89,7 @@
     width: 100%;
   }
   .careerinput {
-    width: 15rem;
+    width: 90%;
   }
   .inputcareer {
     flex-direction: column;
