--- a/src/components/layout/Banner.css
+++ b/src/components/layout/Banner.css
@@ -58,7 +58,7 @@
 @media (max-width: 768px) {
   .bannerShadow p {
     text-align: center;
-    width: 17rem;
+    width: 98%;
   }
   .bannerShadowheading {
     font-size: 1.8rem;
