--- a/src/components/layout/HomeService.css
+++ b/src/components/layout/HomeService.css
@@ -1,6 +1,7 @@
 .homeService {
   width: 100%;
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  padding: 2rem 0;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -79,7 +80,7 @@
     flex-direction: column;
   }
   .homeService {
-    min-height: 200vh;
+    /* min-height: 200vh; */
     gap: 1rem;
     align-items: center;
   }
