--- a/src/components/layout/WhyChoose.css
+++ b/src/components/layout/WhyChoose.css
@@ -1,11 +1,13 @@
 .whychooseContainer {
   width: 100%;
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  padding: 2rem 0;
   background-color: white;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
   justify-content: center;
+  align-items: center;
 }
 .whyyy {
   color: var(--darkblue);
@@ -53,7 +55,7 @@
     font-size: 2rem;
   }
   .whychooseImg {
-    width: 17rem;
+    width: 98%;
     height: 17rem;
   }
   .whychoosemech {
@@ -66,6 +68,6 @@
   }
   .whychooseContainer
   {
-    min-height: 190vh;
+    /* min-height: 190vh; */
   }
 }
