--- a/src/components/layout/WhyChoose.css
+++ b/src/components/layout/WhyChoose.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   gap: 1.5rem;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
 }
 .whyyy {
   color: var(--darkblue);
@@ -49,10 +49,12 @@
 @media (max-width: 768px) {
   .whyyy {
     padding-left: 1rem;
+    text-align: center;
   }
   .whyChoose {
     padding-left: 1rem;
     font-size: 2rem;
+    text-align: center;
   }
   .whychooseImg {
     width: 98%;
