--- a/src/components/pages/Service.css
+++ b/src/components/pages/Service.css
@@ -8,6 +8,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  /* padding: 5rem 0; */
 }
 .service-banner p{
   color: white;
@@ -21,13 +22,14 @@ font-weight: 700;
 }
 .service-list {
   width: 100%;
-  height: 210vh;
+  /* height: 210vh; */
  
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 2rem;
+  padding: 2rem 0;
 }
 .service-box {
   width: 60rem;
@@ -81,10 +83,7 @@ border: none;
 
 
 @media (max-width: 768px) {
-  .service-box {
-    flex-direction: column;
-    gap: 0;
-  }
+ 
   .design-image {
     /* width: 17rem;
     height: 15rem; */
@@ -92,25 +91,31 @@ border: none;
   }
   .servicelist-box {
     /* display: none; */
-    width: 17rem;
+    width: 98%;
+    /* height: 80rem; */
     flex-direction: column;
-    padding-bottom: 10rem;
+    /* padding-bottom: 10rem; */
   }
   .service-box {
-    width: 18rem;
-    height: 30rem;
+    flex-direction: column;
+    gap: 0;
+    width: 98%;
+    height: 40rem;
+    
   }
   .mechanical-design
   {
-    padding-left: 2.5rem;
+    /* padding-left: 2.5rem; */
+    text-align: center;
     font-size: 1.5rem;
 
   }
   .service-list
   {
-    min-height: 302vh;
+    /* min-height: 302vh; */
     gap: .5rem;
     /* justify-content: center; */
     /* align-items: center; */
   }
+  
 }
