--- a/src/components/layout/AboutPage.css
+++ b/src/components/layout/AboutPage.css
@@ -22,7 +22,8 @@
   font-size: 2.5rem;
   font-weight: bold;
   color: var(--gray);
-  font-family: "Dancing Script", serif;
+  font-family: "Funnel Sans", sans-serif;
+  /* font-family: "Dancing Script", serif; */
 }
 .we {
   color: var(--darkblue);
