--- a/src/components/layout/MissionAndVision.css
+++ b/src/components/layout/MissionAndVision.css
@@ -14,7 +14,8 @@
   color: var(--darkblue);
   font-size: 2rem;
   font-weight: 700;
-  font-family: "Dancing Script", serif;
+  font-family: "Funnel Sans", sans-serif;
+  /* font-family: "Dancing Script", serif; */
 }
 .mission-ul {
   width: 35rem;
