--- a/src/components/layout/WhyChoose.css
+++ b/src/components/layout/WhyChoose.css
@@ -13,14 +13,16 @@
   color: var(--darkblue);
   font-weight: 700;
   font-size: 1.2rem;
-  font-family: "Dancing Script", serif;
+  font-family: "Funnel Sans", sans-serif;
+  /* font-family: "Dancing Script", serif; */
   padding-left: 13rem;
 }
 .whyChoose {
   font-size: 2.2rem;
   font-weight: bold;
   color: var(--gray);
-  font-family: "Dancing Script", serif;
+  font-family: "Funnel Sans", sans-serif;
+  /* font-family: "Dancing Script", serif; */
   padding-left: 13rem;
 }
 .whychooseImg {
